[workspace]
resolver = "3"
members = ["client", "server", "shared"]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
futures-channel = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
eframe = { version = "0.33.3", features = ["default"] }
egui_extras = { version = "0.33.3", features = ["svg"] }
egui-twemoji = "0.8.0"
evdev = "0.13.2"
ctrlc = "3.5.1"
winapi = { version = "0.3.9", features = ["winuser"] }